Major Redesign Landing Page inspired by Anthropic and Mues AI with book-cloth design, mailto CTAs, scroll-responsive navbar, and security fixes
- Migrated design from tacivo-collective with HSL color system
- Implemented scroll-responsive navbar (logo 13.svg -> 15.svg)
- Added mailto links to all CTA buttons with pre-filled subjects/bodies
- Updated README with comprehensive documentation
- Fixed security: added .env.local to .gitignore
- Updated to Playfair Display font and book-cloth color palette
- Interview platform with AI voice controls
- All build checks passing

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,16 @@ next-env.d.ts
 !.vscode/extensions.json
 .idea
 .DS_Store
+*.DS_Store
+
+# backup files
+*.bak
+*~
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 .env
+.env.local
+.env*.local
