--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
     "@elevenlabs/elevenlabs-js": "^2.24.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.57.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.344.0",
     "next": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
